Refine `contact` field
* Per listing there is only one contact, so rename to singular `contact`
  instead of `contacts`
* This field is not in ListingRequest, so remove it from there
* Property does not have contact, only Listing does
* Adjust ListingResource to return the `contact` field correctly
* Update swagger generated files
