# storage/api-docs/api-docs.json
@@ -1014,26 +1014,6 @@
                         },
                         "type": "object"
                     },
-                    "contacts": {
-                        "properties": {
-                            "name": {
-                                "type": "string"
-                            },
-                            "profilePictureURL": {
-                                "type": "string"
-                            },
-                            "phoneNumber": {
-                                "type": "string"
-                            },
-                            "sourceURL": {
-                                "type": "string"
-                            },
-                            "provider": {
-                                "type": "string"
-                            }
-                        },
-                        "type": "object"
-                    },
                     "isPrivate": {
                         "type": "boolean",
                         "example": false
@@ -1186,21 +1166,15 @@
                         },
                         "type": "object"
                     },
-                    "contacts": {
+                    "contact": {
                         "properties": {
                             "name": {
-                                "type": "string"
-                            },
-                            "profilePictureURL": {
                                 "type": "string"
                             },
                             "phoneNumber": {
                                 "type": "string"
                             },
-                            "sourceURL": {
-                                "type": "string"
-                            },
-                            "provider": {
+                            "company": {
                                 "type": "string"
                             }
                         },
